Fixed font size and spacing in left panel

--- a/public/app/css/_base.scss
+++ b/public/app/css/_base.scss
@@ -7,7 +7,7 @@ body {
   background-color: $gray;
   color: $white;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   margin: 0;
 }
 input, button {
