--- a/public/app/css/_component.scss
+++ b/public/app/css/_component.scss
@@ -113,4 +113,13 @@ $size--resultes_panel--width: 25%;
 .clear {
   clear: both;
 }
-  
+
+.ui-accordion .ui-accordion-content {
+  padding: 0.5em 0.5em;
+}
+
+.control label {
+  display: inline-block;
+  margin-top: 0.5em;
+  margin-bottom: 0.2em;
+}
